--- a/index.html
+++ b/index.html
@@ -2,4 +2,15 @@
 <p>Phone numbers. Num&eacute;ro Tel&eacute;phonique. Numero telef&ocirc;nico:&nbsp;<br />- Canada: <strong>+1 8735591100, +1 4035106682, +1 4387787182</strong><br />- Colombia: <strong>+57 3007823111, +57 3006013348, +57 3117138791</strong></p>
 <p>Email: <strong>jesanchezgalv@gmail.com, alexei8y10@yahoo.es, melva.galvis1@gmail.com, limimaco@gmail.com</strong></p>
 <p>RH Blood Type. Groupe Sanguin. Sangre RH: <strong>A+</strong></p>
-<p><strong><a href="https://www.linkedin.com/in/jairo-ernesto-sanchez-galvis-4a336111/">LinkedIn</a></strong><br /><strong><a href="https://www.facebook.com/chonchoguan">Facebook</a></strong></p>
+<p>
+  <strong>
+    <a href="https://www.linkedin.com/in/jairo-ernesto-sanchez-galvis-4a336111/">LinkedIn</a>
+  </strong>
+  <br />
+  <strong>
+    <a href="https://www.facebook.com/chonchoguan">Facebook</a>
+  </strong>
+  <strong>
+    <a href="https://drive.google.com/file/d/1bfwLKxuQfWnFwla5xe34i_rWLIpsADQR/view?usp=sharing">COVID-19 Vaccination-proof-Quebec-Canada</a>
+  </strong>
+</p>
